--- a/public/style.css
+++ b/public/style.css
@@ -46,5 +46,27 @@ h1 {
     margin: 15px;
 }
 
+#blackjack-container {
+    border: 3px solid black;
+    text-align: center;
+    border-radius: 25px;
+    background-color: #0a380a;
+}
+
+.button {
+    color: white;
+    min-width: 80px;
+    background-color: blue;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 30px;
+}
+
+.writing {
+    color: white;
+    font-size: 30px;
+    margin: 15px;
+}
+
 
 
