--- a/public/style.css
+++ b/public/style.css
@@ -60,6 +60,7 @@ h1 {
     margin-left: 30px;
     margin-right: 30px;
     font-size: 30px;
+    margin-bottom: 30px;
 }
 
 .writing {
@@ -70,7 +71,17 @@ h1 {
 
 .card {
    width: 75px;
-   height: auto; 
+   height: auto;
 }
 
+#user-hand {
+    margin-top: 5px;
+}
 
+#user-total {
+    margin-top: -15px;
+}
+
+#dealer-total, #user-total {
+    color: gray;
+}
